<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:orientation="vertical">

            <TextView
                android:id="@+id/res_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/res_list_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/res_list_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/res_list_address"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/res_list_opening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res_list_opening"
                android:textSize="13sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/res_list_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="7dp"
                android:text="@string/res_list_distance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/res_list_workmates_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/workmates_icon"
                    android:scaleType="fitStart"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_workmates_res_list" />

                <TextView
                    android:id="@+id/res_list_workmates_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/res_list_workmates_tv"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/res_list_star_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/star_3_3"
                    android:scaleType="fitXY"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_liked" />

                <ImageView
                    android:id="@+id/res_list_star_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/star_2_3"
                    android:scaleType="fitXY"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_liked" />

                <ImageView
                    android:id="@+id/res_list_star_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/star_1_3"
                    android:scaleType="fitXY"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_liked" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/res_list_iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/restaurant_picture"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/background_image"
                tools:ignore="NestedWeights" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="#90909090" />


</LinearLayout>