<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_image_r"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/go4lunch"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/drawer_imageview_profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_anon_user_48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/drawer_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_input_username"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/drawer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>